@@ -133,6 +133,7 @@ userdata
 
 # testing
 /test*
+/boost_unit_tests*
 !/test_wrapper.sh
 src/test
 error*.log
