@@ -4,6 +4,11 @@ Version 1.13.10+dev:
      have linger=no in [end_level].
    * A Tale of Two Brothers:
      * Added a full set of hints on easy difficulty.
+ * Contiuous Integration (CI) and Unit testing
+   * Renamed the target and binary for the Boost unit tests from `test` to
+     `boost_unit_tests`. This quells warnings from CMake about reserved target
+     names, and reduces confusion about which `test` is intended: the wesnoth
+     executable or the standard shell command.
  * Language and i18n:
    * Updated translations: Chinese (Simplified)
  * Lua API:
